samples/_failures_safe/1761424233_efc7aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0024ce7.c: In function ‘main’:
./samples/SAFE/__tmp_e0024ce7.c:142:5: error: expected expression at end of input
  142 |     add_edge(&
      |     ^~~~~~~~
./samples/SAFE/__tmp_e0024ce7.c:142:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_e0024ce7.c:31:5: note: declared here
   31 | int add_edge(struct Graph *g, int src, int dest, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e0024ce7.c:142:5: error: expected declaration or statement at end of input
  142 |     add_edge(&
      |     ^~~~~~~~
